fix gulp z-index

--- a/app/css/category.css
+++ b/app/css/category.css
@@ -15,7 +15,7 @@ body{
 	top: 0;
 	left: 0;
 	padding-top: 45px;
-	z-index: 0;
+	z-index: 999;
 }
 .left_category .left_category_box ul{
 	-webkit-transition: all .3s ease 0s;
